# AHC001

./: .gitignore  README.md
AHC001/: Cargo.toml  auto.sh  devisor.py  out  run.sh  test.sh  提出録.md
AHC001/outfiles/: 0000.txt  0001.txt  0002.txt  0003.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  0040.txt  (+9 more)
AHC001/src/: main.rs
AHC001/trans_output/: 0.txt  1.txt  10.txt  102.txt  105.txt  106.txt  109.txt  11.txt  110.txt  111.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  122.txt  125.txt  129.txt  13.txt  130.txt  131.txt  132.txt  136.txt  14.txt  140.txt  141.txt  142.txt  143.txt  144.txt  145.txt  146.txt  147.txt  148.txt  149.txt  15.txt  150.txt  (+148 more)
tools/: test.sh  testout  trans.sh  vis.html
