[package]
name = "ahc001"
version = "0.1.0"
authors = ["honehaniwa <trttkm@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
rand = "0.7.3"
rand_pcg = "0.2.1"

[features]
default = []
local = []
